Style issues. Don't use new Integer().  Throw our own exception.
git-svn-id: http://argouml.tigris.org/svn/argouml/trunk@10336 a161b567-7d1e-0410-9ef9-912c70fedb3f